<resources>
    <string name="app_name">Gardenizer</string>
    <string name="my_garden">Gardenizer</string>
    <string name="picture_wildflowers">picture of wildflowers</string>

    <string name="januar_text"><b>It\'s winter!</b> \nDon\'t forget to remove snow from roofs, plants and paths
        \ndo the winter cut on your fruit trees\nstart sowing tomatos, bell pepper and annual summerflowers on your window sill
        \nif you have a nesting box outside: check if it is clean and has enough birdseed
        \nyour compost could do with a good stir and sieving </string>

    <string name="february_text"><b>It is still cooooold...</b> \n think about the poor little starving birds and put birdseeds into the nesting boxes
        \nnow it is time for prepare the soil for the closer getting garden season
        \nif the soil is not deeply frozen you can prepare the first plant holes for March and April
        \nif you have italian grape-vine now is the time to trim it!</string>

    <string name="march_text"><b>Spring is coming! Or is it really?</b> \nThe ground and soil is slowly starting to warm up, you can start preparing the first sowing like cauliflower, parsley and parsnips
        \nLet early potatoes bud on your window sill
        \nprepare the soil in your potatoe bed
        \nfertilise your fruit trees and
        \nput up some insect hotels for some buzzing and action in spring and summer!</string>

    <string name="april_text"><b>Sun! Rain! Hail! Frost! </b>
        \nit\'s time to sow your potatoes into the prepared soil!
        \nhave a look at your herbs: now is the time to cut, plant or sow your thyme, salvia, rosemary, oregano and mint
        \nif you plan on having (more) fruit trees or bushes: now is the time them</string>
    <string name="may_text"><b>Last but not least...</b>\nIt\'s May after all! Not long and you can buy and maybe pick your first strawberries!
        \nOne vegetable which is now ready to be picked and prepared is rhubarb, perfect for compot, cake or chutney.
        \nput the potatoes into the wonderfully prepared bed, it is very important to pile the soil very well, don\'t let the potatoes get ruined by the sun
        \nkeep your plants safe from snails, which are now coming out, hungry for freshly growing vegetables...
        \nkeep all plants humid</string>

    <string name="june_text"><b>Strawberry paradise!</b>
        \nBut before your start picking and eating there is a bit of work to do:
        \nstart cultivating salad
        \npick some elderberry blossoms and make some yummy syrup
        \nget that weed out of the ground before its seeds are getting ripe
        \nvegetables to be planted in june: salad, leek, broccoli, herb, sellerie, courgettes (however better results maybe achieved when planting in MAY!
        \nthe perennial herbs are getting high, you should consider propping them so that they don\'t collaps
         </string>

    <string name="july_text"><b>Summer is finally there!</b>
        \nenjoy harvesting the first vegetables and fruit and then don\'t forget to dung the harvested beds
        \nif your weed beds are exploding crop them and dry some weed. Or freeze it!
        \nyoung fruit trees need to be kept free from gras
        \nsummercut on your sweet cherry trees
        \ncut your perennial herbs and roses to stimulate more blossoms
        \npick a bunch of flowers and enjoy them on your coffee table</string>

    <string name="august_text"><b>An apple a day...</b>
        \ntime to pick your first apples, plums and summer pears
        \nprepare a new strawberry field for next year
        \ntime to harvest rose hips - try them in jam for example!
        \nkeep the compost moist
        \nsow some winter herbs
        \nif it\'s a hot and dry summer put up a bird bath</string>
    <string name="september_text"><b>Prepare for the colder days</b>
        \nharvest your potatoes, you\'ll be surprised how much you get out of one single planted potatoe!
        \nonions should be ready as well
        \nif you\'re lucky you have some raspberries waiting for you
        \nprepare a new bed for perennial herbs
        \nget out the tulip bulbs which will double after a year and divide them. Then plant them in fresh soil.
        \nTIPP: if you plant them within a plastic flower pot they will be safe from getting eaten by root voles or other animals and it will be easy for you to find them next autumn. </string>

    <string name="october_text"><b>Autumn is coming!</b>
        \nnow the sometimes rough but at the same time cosy season is starting
        \nthere is still something to harvest like walnuts and other nuts, some potatoes might still be there
        \ntry to collect snail eggs and get rid of them
        \n gather leaves and put it on the compost
        \nnow is the time to plant roses and tulip bulbs
        \nstart putting sensitive plants in pots inside
        \n </string>

    <string name="november_text"><b>BRRRRRRRRR</b>
        \nprepare your harvested vegetable beds for winter
        \nfirst frost might be coming so pour the water out of watering cans and rain barrels
        \nclean and put away your gardening tools
        \nplant rhubarb now
        \nWinter cut for fruit trees
        \nput away your garden chairs and tables
        \nprotect sensitive plants from frost</string>

    <string name="december_text"><b>Save the birds!</b>
        \nnot much active gardening work to do, BUT
        \nyou can plan for next year: which plants would you like to plant?
        \nput up some new high beds
        \nenjoy winter, bake some cookies and go to a bunch of x-mas markets
        \n(oh, and don\'t forget to buy lots of presents)</string>

    <string name="january"><b>January</b></string>
    <string name="february"><b>February</b></string>
    <string name="march"><b>March</b></string>
    <string name="april"><b>April</b></string>
    <string name="may"><b>May</b></string>
    <string name="june"><b>June</b></string>
    <string name="july"><b>July</b></string>
    <string name="august"><b>August</b></string>
    <string name="september"><b>September</b></string>
    <string name="october"><b>October</b></string>
    <string name="november"><b>November</b></string>
    <string name="december"><b>December</b></string>

    <string name="flowers"><b>Flowers</b></string>
    <string name="flowers_text"><b>Bring colour into your garden</b>
        \nthere are several kinds of flowers, some coming back every year - like roses and tulips - and yearly flowers like sunflowers
        \nflowers are not only beautiful but also attract bees, humming birds and butterflies, whom they need to transfer the pollens  </string>
    <string name="calender">calender</string>
    <string name="plants">plants</string>
    <string name="back">back</string>
    <string name="bushes">Bushes</string>
    <string name="bushes_text"><b>bush or shrub</b>\na bush or shrub is a small to medium sized woody plant
        \nsounds a bit like a tree but other than a tree it has multiple stems and is shorter of height.</string>
    <string name="fruittree">Trees</string>
    <string name="fruittree_text"><b>What is a tree?</b>
        \naccording to Wikipedia there is no universally recognised precise definition of what a tree is, either botanically or in common language
        \nhowever we love fruittrees in our gardens! Providing us with fresh, juicy, sweet fruit
        \nbroadleaf trees are lovely as well but make a hell lot of work in autumn...</string>



</resources>
