<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<ImageView
    android:src="@drawable/wildflowers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/picture_wildflowers"
    android:scaleType="centerCrop"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.mgibbon.gardenapp.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_garden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/my_garden"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="normal"
        android:padding="7dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center">


        <Button
            android:id="@+id/calender_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/calender"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@color/buttons"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:onClick="toggleCalender" />
        <Button
            android:id="@+id/plants_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/plants"
            android:layout_below="@id/calender_button"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@color/buttons"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:onClick="togglePlants"
            />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/calender_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/calender"
                android:textAllCaps="true"
                android:gravity="center"
                android:textStyle="normal"
                android:background="#FFFFFF"
                />
            <ImageView
                android:src="@drawable/backbutton"
                android:layout_width="65sp"
                android:layout_height="35sp"
                android:layout_margin="4dp"
                android:text="@string/back"
                android:background="#FFFFFF"
                android:onClick="toggleCalender"
                />
        </RelativeLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/january"
            android:gravity="center"
            android:textSize="25sp"
            android:background="#2196F3"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:onClick="toggleJanuaryText"
            />

        <TextView
            android:id="@+id/january_text"
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:text="@string/januar_text"
            android:textColor="@color/text_months"
            android:gravity="left"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/february"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:textSize="25sp"
            android:background="#03A9F4"
            android:onClick="toggleFebruaryText"/>

        <TextView
            android:id="@+id/february_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_months"
            android:text="@string/february_text"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/march"
            android:textSize="25sp"
            android:background="#00BCD4"
            android:onClick="toggleMarchText"/>

        <TextView
            android:id="@+id/march_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/march_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/april"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:textSize="25sp"
            android:background="#8BC34A"
            android:onClick="toggleAprilText"/>

        <TextView
            android:id="@+id/april_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/april_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/may"
            android:textSize="25sp"
            android:background="#CDDC39"
            android:onClick="toggleMayText"/>

        <TextView
            android:id="@+id/may_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/may_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/june"
            android:textSize="25sp"
            android:background="#FFEB3B"
            android:onClick="toggleJuneText"/>

        <TextView
            android:id="@+id/june_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_months"
            android:text="@string/june_text"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/july"
            android:textSize="25sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:background="#FFC107"
            android:onClick="toggleJulyText"/>

        <TextView
            android:id="@+id/july_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_months"
            android:text="@string/july_text"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/august"
            android:textSize="25sp"
            android:background="#FF9800"
            android:onClick="toggleAugustText"/>

        <TextView
            android:id="@+id/august_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/august_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/september"
            android:textSize="25sp"
            android:background="#FF5722"
            android:onClick="toggleSeptemberText"/>

        <TextView
            android:id="@+id/september_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/september_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/october"
            android:textSize="25sp"
            android:background="#F44336"
            android:onClick="toggleOctoberText"/>

        <TextView
            android:id="@+id/october_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/october_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/november"
            android:textSize="25sp"
            android:background="#E91E63"
            android:onClick="toggleNovemberText"/>

        <TextView
            android:id="@+id/november_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/november_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/december"
            android:textSize="25sp"
            android:background="#9C27B0"
            android:onClick="toggleDecemberText"
            />

        <TextView
            android:id="@+id/december_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/december_text"
            android:textColor="@color/text_months"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/plants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/plants_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/plants"
                style="@style/headlineTextView"
                android:gravity="center"
                android:textStyle="normal"
                android:background="#FFFFFF"
                />
            <ImageView
                android:src="@drawable/backbutton"
                android:layout_width="65sp"
                android:layout_height="35sp"
                android:layout_margin="4dp"
                android:text="@string/back"
                android:background="#FFFFFF"
                android:onClick="togglePlants"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/flowers"
            android:gravity="center"
            android:textSize="25sp"
            android:background="#2196F3"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:textAllCaps="true"
            android:onClick="toggleFlowersText"
            />

        <TextView
            android:id="@+id/flowers_text"
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:text="@string/flowers"
            android:textColor="@color/text_months"
            android:gravity="left"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="4dp"
            android:padding="15dp"
            android:background="@color/background_months"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>




</ScrollView>
</FrameLayout>